--- a/estilos/style.css
+++ b/estilos/style.css
@@ -133,7 +133,7 @@ div.continue_google > p {
 
 p#linha_horizontal::before,
 p#linha_horizontal::after{
-    content:"\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0";
+    content:"\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0";
     text-decoration:line-through;
     margin: 0 10px;
 }
@@ -149,4 +149,12 @@ div.termos_condicoes {
 
 div.termos_condicoes > p{
     font-size: 0.8em;
+}
+
+div.logo {
+    background-image: url('../imagens/logo1-g.png');
+    background-position: top center;
+    background-size: contain;
+    width: 330px;
+    height: 320px;
 }
