--- a/estilos/style.css
+++ b/estilos/style.css
@@ -24,7 +24,7 @@ section.informacoes_login {
 
 div.informacoes_cadastrais {
     text-align: center;
-    margin: 30px 0;
+    margin-bottom: 15px;
 }
 
 div.cont_tit {
